--- a/assets/style.css
+++ b/assets/style.css
@@ -17,6 +17,7 @@ body {
     min-height: 100vh;
 
     margin: 0 24px;
+    color: #2F383E
 }
 
 @media only screen and (max-width: 468px) {
@@ -114,7 +115,7 @@ small {font-size: 0.8em;}
     position: absolute;
     bottom: 8px;
     left: 100%;
-    background-color: #2F383E;
+    background-color: #fff;
     border-radius: 4px;
     padding: 4px;
     box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.25);
