--- a/assets/style.css
+++ b/assets/style.css
@@ -92,7 +92,7 @@ h4 {font-size: 1.563em; color: #899C40}
 
 h5, .larger {font-size: 1.25em; color: #569D79}
 
-small {font-size: 0.8em; color: #B87B9D}
+small {font-size: 0.8em; color: #D1C4A9}
 
 /* backlinks */
 .backlinks-title {
@@ -122,6 +122,7 @@ small {font-size: 0.8em; color: #B87B9D}
     width: 348px;
     max-height: 148px;
     overflow: hidden;
+    color: #ffae00;
 }
 .backlink__preview::after {
     content: "";
@@ -130,6 +131,7 @@ small {font-size: 0.8em; color: #B87B9D}
     background: linear-gradient(transparent, white);
     width: 100%;
     height: 24px;
+    color: #ff9a9a;
 }
 
 .backlink__preview h1 {
@@ -159,6 +161,6 @@ strong {
   color: #DA6362;
 }
 
-del {
+s {
     color: #859289;
 }
