More CSS Changes

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -10,9 +10,9 @@
         </a>
 
         <nav>
-            <a href="/">Home</a>
-            <a href="/about">About Me</a>
-            <a href="/notes">Notes</a>
+            <a href="/" style="color: #D1C4A9;">Home</a>
+            <a href="/about" style="color: #D1C4A9;">About Me</a>
+            <a href="/notes" style="color: #D1C4A9;">Notes</a>
         </nav>
     </header>
     <main>
