--- a/assets/style.css
+++ b/assets/style.css
@@ -180,6 +180,16 @@ a:hover:visited:not(nav a) {
     background-color: var(--emphasis2);
 }
 
+mark {
+  --lowlight-background: var(--primary);
+  border-radius: 0;
+  background-image: linear-gradient(
+    360deg,
+    rgba(255, 255, 255, 0) 40%,
+    var(--lowlight-background) 40%
+  );
+}
+
 /* --- Typography --- */
 p,
 li,
