--- a/assets/style.css
+++ b/assets/style.css
@@ -124,7 +124,9 @@ table {
 }
 
 img {
-    align-self: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* --- Colours --- */
@@ -187,7 +189,7 @@ mark {
     360deg,
     rgba(255, 255, 255, 0) 40%,
     var(--lowlight-background) 40%
-  );
+  ) !important;
 }
 
 /* --- Typography --- */
@@ -224,6 +226,7 @@ h5 {
     line-height: 1.3;
     overflow-wrap: break-word;
     font-family: 'Poppins', 'Inter', sans-serif;
+    line-height: 1.5em;
 }
 
 h1 {
