--- a/assets/style.css
+++ b/assets/style.css
@@ -123,7 +123,7 @@ table {
     width: 100%;
 }
 
-img {
+img :not(.favicon) {
     display: block;
     margin-left: auto;
     margin-right: auto;
