--- a/assets/style.css
+++ b/assets/style.css
@@ -32,8 +32,8 @@ body {
 
 main {
     flex-grow: 1;
-    max-width: 70ch;
-    width: 100%;
+    max-width: 70%;
+    width: 70ch;
     margin: 0 auto;
     padding-top: 50px;
 }
