--- a/assets/style.css
+++ b/assets/style.css
@@ -32,10 +32,11 @@ body {
 
 main {
     flex-grow: 1;
-    max-width: 70%;
+    max-width: 80%;
     width: 70ch;
     margin: 0 auto;
     padding-top: 50px;
+    hyphens: auto;
 }
 
 .page-header {
