Revert "Theme Switcher?"
This reverts commit 37493abfb52308c9711e706375659450e028c52e.

--- a/assets/style.css
+++ b/assets/style.css
@@ -142,14 +142,6 @@ label {
     border-radius: 50%;
 }
 
-[id="light"] ~ .page-wrapper [for="light"] {
-    background: var(--primary-light);
-  }
-   
-[id="dark"] ~ .page-wrapper [for="dark"] {
-    background: var(--primary-dark);
-}
-
 /* Tables */
 th, td {
     padding: 8px;
@@ -169,19 +161,19 @@ img :not(img.favicon) {
 }
 
 /* --- Colours --- */
-#light:checked ~ body::after {
+#light:checked ~ body {
     background-color: var(--primary-light);
 }
 
-#dark:checked ~ body::after {
+#dark:checked ~ body {
     background-color: var(--primary-dark);
 }
 
-#light:checked ~ .page-header::after {
+#light:checked ~ .page-header {
     background-color: var(--secondary-light);
 }
 
-#dark:checked ~ .page-header::after {
+#dark:checked ~ .page-header {
     background-color: var(--secondary-dark);
 }
 
@@ -189,14 +181,14 @@ img :not(img.favicon) {
 #light:checked ~ p,
 #light:checked ~ li,
 #light:checked ~ ::marker,
-#light:checked ~ small::after {
+#light:checked ~ small {
     color: var(--quarterly-light);
 }
 
 #dark:checked ~ p,
 #dark:checked ~ li,
 #dark:checked ~ ::marker,
-#dark:checked ~ small::after {
+#dark:checked ~ small {
     color: var(--quarterly-dark);
 }
 
@@ -224,23 +216,23 @@ img :not(img.favicon) {
     color: var(--bold-dark)
 }
 
-#light:checked ~ svg::after {
+#light:checked ~ svg {
     fill: var(--quarterly-light);
     transition: 0.3s;
     width: 16px;
 }
 
-#light:checked ~ svg:hover::after {
+#light:checked ~ svg:hover {
     fill: var(--primary-light)
 }
 
-#dark:checked ~ svg::after {
+#dark:checked ~ svg {
     fill: var(--quarterly-dark);
     transition: 0.3s;
     width: 16px;
 }
 
-#dark:checked ~ svg:hover::after {
+#dark:checked ~ svg:hover {
     fill: var(--primary-dark)
 }
 
