--- a/assets/style.css
+++ b/assets/style.css
@@ -1,27 +1,15 @@
 :root {
-    --primary-light: #f2f2f2; /* For background */
-    --secondary-light: #d1d1d1; /* For midground? */
-    --tertiary-light: #a1a1a1; /* Foreground */
-    --quarterly-light: #303030; /* Text and things */
+    --primary: #f2f2f2; /* For background */
+    --secondary: #d1d1d1; /* For midground? */
+    --tertiary: #a1a1a1; /* Foreground */
+    --quarterly: #303030; /* Text and things */
 
-    --link1-light: #0008a4; /* Links */
-    --link2-light: #a00093; /* Visited links */
+    --link1: #0008a4; /* Links */
+    --link2: #a00093; /* Visited links */
 
-    --bold-light: #303030;
-    --italics-light: #303030;
-    --strikethrough-light: #303030;
-    /* -------------------------------------------------------------- */
-    --primary-dark: #303030; /* For background */
-    --secondary-dark: #595959; /* For midground? */
-    --tertiary-dark: #d1d1d1; /* Foreground */
-    --quarterly-dark: #f2f2f2; /* Text and things */
-
-    --link1-dark: #0008a4; /* Links */
-    --link2-dark: #a00093; /* Visited links */
-
-    --bold-dark: #f2f2f2;
-    --italics-dark: #f2f2f2;
-    --strikethrough-dark: #f2f2f2;
+    --bold: #303030;
+    --italics: #303030;
+    --strikethrough: #303030;
 }
 
 html {
@@ -42,6 +30,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+
+    background-color: var(--primary);
 }
 
 main {
@@ -62,6 +52,8 @@ main {
     width: 100%;
     position: fixed;
     z-index: 2;
+
+    background-color: var(--secondary);
 }
 
 nav div {
@@ -86,14 +78,14 @@ nav div {
 pre {
     padding: 10px;
     border-radius:5px;
-    background-color: var(--quarterly-light);
-    color: var(--primary-light);
+    background-color: var(--quarterly);
+    color: var(--primary);
 }
 
 /* Quotes */
 blockquote {
     padding: 10px;
-    border: 1px solid var(--quarterly-light);
+    border: 1px solid var(--quarterly);
     border-radius: 5px;
 }
 
@@ -110,43 +102,30 @@ body {
 /* Lines */
 hr {
     height: 0.1em;
-    background-color: var(--secondary-light);
+    background-color: var(--secondary);
     border: none;
 }
 
 /* Theme Switcher */
-[type="radio"] {
-    position: fixed;
-    left: -9999px;
+.theme-switches {
+    display: flex;
+    justify-content: center;
 }
-   
-label {
+  
+.switch {
+    border: 2px solid black;
+    border-radius: 50px;
+    height: 30px;
+    width: 30px;
+    margin: 10px;
     cursor: pointer;
-}
-
-.color-palette {
-    position: fixed;
-    top: 100px;
-    right: 15px;
-    display: grid;
-    grid-row-gap: 10px;
-    padding: 10px;
-    border-radius: 20px;
-    background: rgba(0, 0, 0, 0.4);
-}
-   
-.color-palette label {
-    position: relative;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
 }
 
 /* Tables */
 th, td {
     padding: 8px;
     text-align: left;
-    border: 0.1em solid var(--secondary-light);
+    border: 0.1em solid var(--secondary);
 }  
 
 table {
@@ -161,128 +140,61 @@ img :not(img.favicon) {
 }
 
 /* --- Colours --- */
-#light:checked ~ body {
-    background-color: var(--primary-light);
+p,
+li,
+::marker,
+small {
+    color: var(--quarterly);
 }
 
-#dark:checked ~ body {
-    background-color: var(--primary-dark);
-}
-
-#light:checked ~ .page-header {
-    background-color: var(--secondary-light);
-}
-
-#dark:checked ~ .page-header {
-    background-color: var(--secondary-dark);
-}
-
-
-#light:checked ~ p,
-#light:checked ~ li,
-#light:checked ~ ::marker,
-#light:checked ~ small {
-    color: var(--quarterly-light);
-}
-
-#dark:checked ~ p,
-#dark:checked ~ li,
-#dark:checked ~ ::marker,
-#dark:checked ~ small {
-    color: var(--quarterly-dark);
-}
-
-#light:checked ~ s /* strikethrough-light */ { 
-    color: var(--strikethrough-light)
-}
-
-#dark:checked ~ s /* strikethrough-light */ { 
-    color: var(--strikethrough-dark)
-}
-
-#light:checked ~ em /* italics-light */ { 
-    color: var(--italics-light)
-}
-
-#dark:checked ~ em /* italics-light */ { 
-    color: var(--italics-dark)
-}
-
-#light:checked ~ strong /* bold-light */ { 
-    color: var(--bold-light)
-}
-
-#dark:checked ~ strong /* bold-light */ { 
-    color: var(--bold-dark)
-}
-
-#light:checked ~ svg {
-    fill: var(--quarterly-light);
+svg {
+    fill: var(--quarterly);
     transition: 0.3s;
     width: 16px;
 }
 
-#light:checked ~ svg:hover {
-    fill: var(--primary-light)
+svg:hover {
+    fill: var(--primary)
 }
 
-#dark:checked ~ svg {
-    fill: var(--quarterly-dark);
-    transition: 0.3s;
-    width: 16px;
+h1,
+h2,
+h3,
+h4,
+h5,
+th,
+td {
+    color: var(--quarterly);
 }
 
-#dark:checked ~ svg:hover {
-    fill: var(--primary-dark)
-}
-
-#light:checked ~ h1,
-#light:checked ~ h2,
-#light:checked ~ h3,
-#light:checked ~ h4,
-#light:checked ~ h5,
-#light:checked ~ th,
-#light:checked ~ td {
-    color: var(--quarterly-light);
-}
-
-#dark:checked ~ h1,
-#dark:checked ~ h2,
-#dark:checked ~ h3,
-#dark:checked ~ h4,
-#dark:checked ~ h5,
-#dark:checked ~ th,
-#dark:checked ~ td {
-    color: var(--quarterly-dark);
-}
 nav a {
     color: transparent;
 }
 
 a:link:not(nav a) {
     border-radius: 0.25em;
-    color: var(--link1-light);
+    color: var(--link1);
     transition: all 0.3s ease;
 }
 
 a:visited:not(nav a) {
     border-radius: 0.25em;
-    color: var(--link2-light);
+    color: var(--link2);
     transition: all 0.3s ease;
 }
 
 a:hover:not(nav a):not(:visited) {
-    color: var(--secondary-light);
-    background-color: var(--link1-light);
+    color: var(--secondary);
+    background-color: var(--link1);
 }
 
 a:hover:visited:not(nav a) {
-    color: var(--secondary-light);
-    background-color: var(--link2-light);
+    color: var(--secondary);
+    background-color: var(--link2);
 }
 
 mark {
-  --lowlight-background: var(--primary-light);
+  --lowlight-background: var(--primary);
   border-radius: 0;
   background-image: linear-gradient(
     360deg,
