Possibly fixed images, and reformatted graph view

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -51,5 +51,17 @@
     <footer class="page-footer">
         <small>Copyrighted by {{site.author}} except for the parts that are not</small>
     </footer>
+    <script>
+    [...document.body.querySelectorAll("a")].forEach((a,i)=>{
+    if (a.innerHTML.indexOf(".png") != -1) {
+    // convert to image.
+    let img = document.createElement("img");
+    img.src = "/Images/" + a.innerHTML;
+    a.previousSibling.nodeValue = a.previousSibling.nodeValue.split("\n!")[0];
+    if (a.previousSibling.nodeValue == "!") a.previousSibling.nodeValue = "";
+        a.replaceWith(img, document.createElement("br"));
+    }
+    });
+    </script>
 </body>
 </html>
